--- a/src/pages/hello-ionic/hello-ionic.html
+++ b/src/pages/hello-ionic/hello-ionic.html
@@ -1,11 +1,3 @@
-<!-- <ion-header>
-  <ion-navbar>
-    <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
-    </button>
-    <ion-title>Hello Ionic</ion-title>
-  </ion-navbar>
-</ion-header> -->
 
 <ion-content>
   <div class="container-home">
@@ -15,7 +7,7 @@
       <div class="txt-waky">Wakypet</div>
     </div>
     <div class="div-btns-login">
-      <div class="div-btn-login"><button class="btn-login btn-login-fb">Entrar por Facebook</button></div>
+      <div class="div-btn-login"><button class="btn-login btn-login-fb" (click)="navigateToHome()">Entrar por Facebook</button></div>
       <div class="div-btn-login"><button class="btn-login btn-login-ss" (click)="navigateToLogin()">Iniciar Sesión</button></div>
       <div class="div-btn-login"><button class="btn-login btn-register" (click)="navigateToRegister()">Registrarse</button></div>
     </div>
