--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -4,23 +4,39 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<!-- <ion-header>
+<ion-header>
   <ion-navbar>
+    <button ion-button menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
     <ion-title>Home</ion-title>
   </ion-navbar>
-</ion-header> -->
+</ion-header>
 
-<ion-content padding>
+<ion-content>
 <div class="container-home">
-  <div class="btn-ayuda-home">Ayuda</div>
-  <div class="div-logo-waky">
-    <img src="/PetsProject/src/assets/imgs/logo-waky.png" alt="" class="logo-waky">
-    <div class="txt-waky">Wakypet</div>
+  <div class="div-text-home">
+    <div class="txt-home">¡Hola! ¿Que quieres hacer hoy?</div>
   </div>
-  <div class="div-btns-login">
-    <div class="btn-login btn-login-fb">Entrar por Facebook</div>
-    <div class="btn-login btn-login-ss">Iniciar Sesión</div>
-    <div class="btn-login btn-registrarse">Registrarse</div>
+  <div class="div-btns-home">
+    <div class="div-btn-home div-btn-paseo">
+      <div class="title-btn">Programar un paseo</div>
+      <div class="text-btn">Para hoy, o para cualquier día <br> de la semana.</div>
+      <div class="div-img-btn"><img src="../../assets/imgs/btn-1.png" alt="" class="img-btn-paseo"></div>
+    </div>
+    <div class="div-btn-home div-btn-planes">
+        <div class="title-btn">Planes semanales</div>
+        <div class="text-btn">Conoce los planes con <br> precio especial y prográmalo.</div>
+        <div class="div-img-btn"><img src="../../assets/imgs/btn-2.png" alt="" class="img-btn"></div>
+    </div>
+    <div class="div-btn-home">
+        <div class="title-btn-opc">Mis programaciones</div>
+        <div class="text-btn-opc">Aun no has programado paseos</div>
+    </div>
+    <div class="div-btn-home">
+        <div class="title-btn-opc">Próximos paseos</div>
+        <div class="text-btn-opc">No tienes paseos próximamente.</div>
+    </div>
   </div>
   <div class="div-img-home">
     <img src="" alt="">
