--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -22,18 +22,18 @@
     <div class="div-btn-home div-btn-paseo">
       <div class="title-btn">Programar un paseo</div>
       <div class="text-btn">Para hoy, o para cualquier día <br> de la semana.</div>
-      <div class="div-img-btn"><img src="../../assets/imgs/btn-1.png" alt="" class="img-btn-paseo"></div>
+      <div class="div-img-btn"><img src="../../assets/imgs/btn-2.png" alt="" class="img-btn"></div>
     </div>
     <div class="div-btn-home div-btn-planes">
         <div class="title-btn">Planes semanales</div>
         <div class="text-btn">Conoce los planes con <br> precio especial y prográmalo.</div>
-        <div class="div-img-btn"><img src="../../assets/imgs/btn-2.png" alt="" class="img-btn"></div>
+        <div class="div-img-btn"><img src="../../assets/imgs/btn-1.png" alt="" class="img-btn-paseo"></div>
     </div>
-    <div class="div-btn-home">
+    <div class="div-btn-home-opc">
         <div class="title-btn-opc">Mis programaciones</div>
         <div class="text-btn-opc">Aun no has programado paseos</div>
     </div>
-    <div class="div-btn-home">
+    <div class="div-btn-home-opc">
         <div class="title-btn-opc">Próximos paseos</div>
         <div class="text-btn-opc">No tienes paseos próximamente.</div>
     </div>
