--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -7,12 +7,12 @@
 
 <ion-content>
   <div class="content-register">
-    <div class="div-text-form">
+    <div class="div-text-form-register">
 
       <button ion-button class="btn-back-register" (click)="navigateToOtherPage()"><ion-icon name="arrow-back"></ion-icon></button>
       <div class="title-register">Regístrate, así podemos <br> conocerte mejor</div>
     </div>
-    <div class="div-form-login">
+    <div class="div-form-register">
         <form #form="ngForm" (ngSubmit)="navigateToWelcome()" novalidate>
             <ion-item>
               <ion-label>Nombre</ion-label>
@@ -33,10 +33,10 @@
             <ion-item>
               <ion-checkbox></ion-checkbox>
               <ion-label>
-              <a class="btn-recover-pass" href="" style="font-size:2rem !important;">Aceptar términos y condiciones y política de privacidad</a>
+              <a class="btn-recover-pass" href="" style="font-size:1.5rem !important; white-space: normal;">Aceptar términos y condiciones y política de privacidad</a>
             </ion-label>
             </ion-item>
-            <button ion-button class="btn-send-form" type="submit" block>Listo</button>
+            <button ion-button class="btn-send-form-register" type="submit" block>Listo</button>
           </form>
     </div>
   </div>
