--- a/src/pages/welcome/welcome.html
+++ b/src/pages/welcome/welcome.html
@@ -7,7 +7,7 @@
 
 <ion-content>
   <div class="div-container">
-    <div class="div-btn-saltar"><button class="btn-saltar">Saltar</button></div>
+    <div class="div-btn-saltar"><button class="btn-saltar" (click)="navigateToHome()">Saltar</button></div>
     <div class="div-slider">
         <ion-slides pager="true">
             <ion-slide>
@@ -16,8 +16,8 @@
                   <img src="../../assets/imgs/slide1.png" alt="" class="img-slide">
                   <div class="title-slide">Tu mascota segura</div>
                   <div class="text-slide">
-                    Todos los paseos cuentan con la protección <br>
-                    de <span class="bold">SURA para mascotas,</span> y podrás seguir la <br>
+                    Todos los paseos cuentan con la protección de
+                    <span class="bold">SURA para mascotas,</span> y podrás seguir la
                     ruta del paseador por <span class="bold">GPS</span>
                   </div>
                 </div>
@@ -29,8 +29,8 @@
                   <img src="../../assets/imgs/slide2.png" alt="" class="img-slide">
                   <div class="title-slide">Caminemos juntos</div>
                   <div class="text-slide">
-                    Programa un paseo grupal o<br>
-                    personalizado para tu mascota, cualquier <br>
+                    Programa un paseo grupal o
+                    personalizado para tu mascota, cualquier
                     día y a cualquier hora.
                   </div>
                 </div>
@@ -42,8 +42,8 @@
                   <img src="../../assets/imgs/slide3.png" alt="" class="img-slide">
                   <div class="title-slide">Cuidado permanente</div>
                   <div class="text-slide">
-                    Tu mascota es lo más importante por <br>
-                    eso te conectamos con paseadores <br>
+                    Tu mascota es lo más importante por
+                    eso te conectamos con paseadores
                     responsables y que amen los animales.
                   </div>
                 </div>
