--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -10,7 +10,7 @@
     <div class="div-text-form-register">
 
       <button ion-button class="btn-back-register" (click)="navigateToOtherPage()"><ion-icon name="arrow-back"></ion-icon></button>
-      <div class="title-register">Regístrate, así podemos <br> conocerte mejor</div>
+      <div class="title-register">Regístrate, así podemos conocerte mejor</div>
     </div>
     <div class="div-form-register">
         <form #form="ngForm" (ngSubmit)="navigateToWelcome()" novalidate>
