--- a/src/pages/hello-ionic/hello-ionic.html
+++ b/src/pages/hello-ionic/hello-ionic.html
@@ -12,7 +12,7 @@
       <div class="div-btn-login"><button class="btn-login btn-register" (click)="navigateToRegister()">Registrarse</button></div>
     </div>
     <div class="div-img-home">
-      <img src="../../assets/imgs/perrito.png" alt="" class="img-perrito">
+      <!-- <img src="../../assets/imgs/perro_entero.png" alt="" class="img-perrito"> -->
     </div>
   </div>
 
