--- a/src/pages/wakypet-logo/wakypet-logo.html
+++ b/src/pages/wakypet-logo/wakypet-logo.html
@@ -1,6 +1,6 @@
 
 <ion-content padding>
-  <div class="div-loading-img">
-    <img src="../../assets/imgs/logo_index.svg" class="img-loading" alt="">
+  <div class="div-wakypet-img">
+    <img src="../../assets/imgs/logo_index.svg" class="img-wakypet-logo" alt="">
   </div>
 </ion-content>
