--- a/src/pages/welcome/welcome.html
+++ b/src/pages/welcome/welcome.html
@@ -13,7 +13,7 @@
             <ion-slide>
               <div class="div-slide">
                 <div class="div-image-slide">
-                  <img src="../../assets/imgs/slide1.png" alt="" class="img-slide">
+                  <img src="../../assets/imgs/slide1.svg" alt="" class="img-slide">
                   <div class="title-slide">Tu mascota segura</div>
                   <div class="text-slide">
                     Todos los paseos cuentan con la protección de
@@ -26,7 +26,7 @@
             <ion-slide>
               <div class="div-slide">
                 <div class="div-image-slide">
-                  <img src="../../assets/imgs/slide2.png" alt="" class="img-slide">
+                  <img src="../../assets/imgs/slide2.svg" alt="" class="img-slide">
                   <div class="title-slide">Caminemos juntos</div>
                   <div class="text-slide">
                     Programa un paseo grupal o
@@ -39,7 +39,7 @@
             <ion-slide>
               <div class="div-slide">
                 <div class="div-image-slide">
-                  <img src="../../assets/imgs/slide3.png" alt="" class="img-slide">
+                  <img src="../../assets/imgs/slide3.svg" alt="" class="img-slide">
                   <div class="title-slide">Cuidado permanente</div>
                   <div class="text-slide">
                     Tu mascota es lo más importante por
