--- a/src/pages/welcome/welcome.html
+++ b/src/pages/welcome/welcome.html
@@ -48,7 +48,7 @@
                   </div>
                 </div>
               </div>
-              <button ion-button class="btn-start" (click)="navigateToHome()">Comencemos</button>
+              <button ion-button class="btn-start" (click)="navigateToHome()">¡Comencemos!</button>
             </ion-slide>
           </ion-slides>
     </div>
