--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -9,7 +9,7 @@
   <div class="content-register">
     <div class="div-text-form-register">
 
-      <button ion-button class="btn-back-register" (click)="navigateToOtherPage()"><ion-icon name="arrow-back-outline"></ion-icon></button>
+      <button ion-button class="btn-back-register" (click)="navigateToOtherPage()"><ion-icon name="arrow-back"></ion-icon></button>
       <div class="title-register">Regístrate, así podemos conocerte mejor</div>
     </div>
     <div class="div-form-register">
