--- a/src/pages/add-paseo/add-paseo.html
+++ b/src/pages/add-paseo/add-paseo.html
@@ -92,7 +92,7 @@
         </div>
       </div>
       <div class="btns-inicio-paseo">
-        <button class="btn-inicio-paseo">Fecha de Inicio<ion-icon name="arrow-forward" class="btn-inicio-paseo-icon"></ion-icon></button>
+        <button class="btn-inicio-paseo" *ngIf="dayOpcSelected==1">Fecha de Inicio<ion-icon name="arrow-forward" class="btn-inicio-paseo-icon"></ion-icon></button>
         <button class="btn-inicio-paseo">Hora<ion-icon name="arrow-forward" class="btn-inicio-paseo-icon"></ion-icon></button>
         <button class="btn-inicio-paseo">Ubicacion<ion-icon name="arrow-forward" class="btn-inicio-paseo-icon"></ion-icon></button>
       </div>
