modales add pet

--- a/src/pages/add-form/add-form.html
+++ b/src/pages/add-form/add-form.html
@@ -34,6 +34,7 @@
           </ion-item>
           <button ion-button class="btn-send-form" type="submit" block>Guardar</button>
         </form>
+        <button ion-button class="btn-send-form" type="button" (click)="navigateToOtherPageError()" block>Modal Error</button>
   </div>
 </div>
 </ion-content>
