hello - fix footer

--- a/src/pages/hello-ionic/hello-ionic.html
+++ b/src/pages/hello-ionic/hello-ionic.html
@@ -17,6 +17,9 @@
       <div class="div-btn-login"><button class="btn-login btn-register" (click)="navigateToRegister()">Registrarse</button></div>
     </div>
     <div class="div-img-home">
+      <div class="img-home">
+          
+      </div>
       <!-- <img src="../../assets/imgs/perro_entero.png" alt="" class="img-perrito"> -->
     </div>
   </div>
