--- a/src/pages/add-form/add-form.html
+++ b/src/pages/add-form/add-form.html
@@ -23,10 +23,13 @@
               <ion-option >Beagle</ion-option>
             </ion-select>
           </ion-item>
-          <ion-item class="item-add-pet">
-            <!-- <ion-label position="floating"><img src="../../assets/imgs/img_calendar.svg" alt=""></ion-label> -->
-            <ion-datetime placeholder="Fecha de Nacimiento" displayFormat="MM/DD/YYYY" min="1994-03-14" max="2012-12-09"></ion-datetime>
-          </ion-item>
+          <div class="div-fecha">
+            <ion-item class="item-add-pet">
+              <!-- <ion-label position="floating"><img src="../../assets/imgs/img_calendar.svg" alt=""></ion-label> -->
+              <ion-datetime placeholder="Fecha de Nacimiento" displayFormat="MM/DD/YYYY" min="1994-03-14" max="2012-12-09"></ion-datetime>            
+            </ion-item>
+            <div class="div-icon-calendar"><img src="../../assets/icon/calendar.svg" alt="" class="icon-calendar"></div>
+          </div>
           <ion-item class="item-btn">
             <div class="div-btns-foto">Sube una foto de tu mascota</div>
             <div class="btn-galeria">Ver galería<ion-icon class="icon-foto" name="images"></ion-icon></div>
