--- a/src/pages/modal-addpet-error/modal-addpet-error.html
+++ b/src/pages/modal-addpet-error/modal-addpet-error.html
@@ -1,6 +1,6 @@
 <div class="container-modal">
   <ion-header>
-    <button ion-button class="btn-back-close-modal" (click)="closeModal()"><ion-icon name="close"></ion-icon></button>
+    <button class="btn-back-close-modal" (click)="closeModal()"><ion-icon name="close"></ion-icon></button>
     <!-- <ion-navbar>
       <button ion-button class="btn-back-close-modal" (click)="closeModal()"><ion-icon name="close"></ion-icon></button>
     </ion-navbar> -->
