--- a/src/pages/add-paseo/add-paseo.html
+++ b/src/pages/add-paseo/add-paseo.html
@@ -4,11 +4,13 @@
       Entre más paseos semanales programes más descuentos
       obtendrás en el valor de cada paseo.
     </div>
-    <button ion-button class="btn-back-close-paseo" (click)="closeMessage()"><ion-icon name="close"></ion-icon></button>
+    <button class="btn-back-close-paseo" (click)="closeMessage()"><ion-icon name="close"></ion-icon></button>
     <button class="btn-entendido-add-paseo" (click)="closeMessage()">Entendido</button>
   </div>
   <ion-navbar>
-    <button ion-button class="btn-back-paseo" (click)="navigateToOtherPage('HomePage')"><ion-icon name="arrow-back"></ion-icon></button>
+    <button ion-button class="btn-back-paseo" (click)="navigateToOtherPage('HomePage')">
+      <img src="../../assets/icon/ic_arrow_back.svg" alt="" class="icon-back-paseo">
+    </button>
     <ion-title class="title-add-paseo">Programar Paseo</ion-title>
   </ion-navbar>
 </ion-header>
